--- a/TODO
+++ b/TODO
@@ -1,2 +1,8 @@
 kaj je s cssom od ReactToastify
-kak dodati css klasu na componentu koja je iz storybooka da se nadoda na postojecu css klasu 
+kak dodati css klasu na componentu koja je iz storybooka da se nadoda na postojecu css klasu
+kak dodati font
+sto zapravo treba napraviti s Table komponentom
+zasto ne radi slika u headeru
+dali je ok raditi nove komponente u projektu koji su kao intermediate izmedu storybooka i projekta
+    ako da, staviti Popup iz maina u neki intermediate
+    ako ne, maknuti FooterLinks
